Fixing again the focus state on inputs.  Why is Chrome on a PC so funny.

--- a/src/Home.module.css
+++ b/src/Home.module.css
@@ -67,7 +67,7 @@
 }
 .home input {
 	padding: .25rem;
-	border-color: #000;
+	border-radius: .25rem;
 	font-size: 16px;
 	width: 100%;
 	box-sizing: border-box; 
@@ -83,8 +83,8 @@
 .home select {
 	max-width: 250px;
 	width: 100%;
-	border-color: #000;
 	padding: .25rem;
+	border-radius: .25rem;
 	font-size: 16px;
 	border: 2px solid #000;
 }
