--- a/src/App.module.css
+++ b/src/App.module.css
@@ -6,6 +6,10 @@ a,button{
 	font-size: 16px;
 	cursor: pointer;
 }
+a:focus, button:focus{
+	outline:  none;
+	box-shadow:  0px 0px 0px 4px #007CC4;
+}
 .main {
 	max-width: 1280px;
 	width: 100%;
